# StockAnalysisProgram

./: .gitignore  README.md  README.rst  main.py  practical_exercises.ipynb  pyproject.toml  requirements.txt  setup.py
.github/: setup.py
.github/workflows/: ci.yml  jekyll-gh-pages.yml  python_publish.yml
docs/: CHANGELOG.md  Fetcher.md  Plotter.md  Workflow.md  Workflow.mmd  Workflow2.mmd  documentation.md
notebooks/: practical_exercises.ipynb
scripts/: create_tsts.ps1  finance_apis.py
src/data/: finance_apis.csv  nasdaq_listed.csv
src/stock_analysis_program/: __init__.py  _utils.py  cli.py  exceptions.py  main.py
src/stock_analysis_program/fetcher/: __init__.py  financial_metrics_fetcher.py  revenue_growth_fetcher.py  stock_data_fetcher.py  stock_summary_fetcher.py
src/stock_analysis_program/plotter/: __init__.py  current_prices_ticker_display.py  financial_metrics_plotter.py  revenue_growth_plotter.py  stock_exchange_performance_plotter.py  stock_price_plotter.py  stock_volatility_plotter.py
tests/: __init__.py  test_main.py
tests/test_fetcher/: __init__.py  test_financial_metrics_fetcher.py  test_revenue_growth_fetcher.py  test_stock_data_fetcher.py  test_stock_summary_fetcher.py
tests/test_plotter/: __init__.py  test_current_prices_ticker_display.py  test_financial_metrics_plotter.py  test_revenue_growth_plotter.py  test_stock_exchange_performance_plotter.py  test_stock_price_plotter.py  test_stock_volatility_plotter.py
