[tool.poetry]
name = "stock-analysis-program"
version = "1.0.0"
description = "A Python-based toolkit for fetching and visualizing financial data and metrics for stocks."
authors = ["Thaddeus Thomas <thaddeus.r.thomas@gmail.com>"]
license = "MIT"
homepage = "https://github.com/visionary-code-works/stock-analysis-program"
repository = "https://github.com/visionary-code-works/stock-analysis-program"
documentation = "https://github.com/visionary-code-works/stock-analysis-program/docs"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Development Status :: 4 - Beta"
]
packages = [
    { include = "stock_analysis_program", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
yfinance = "^0.2.33"
matplotlib = "^3.8.0"
pandas = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry>=1.71"]
build-backend = "poetry.masonry.api"
